# stm32-secure-ota-platform

./: CMakeLists.txt  README.md
docs/: architecture.md  memory-map.md  update-flow.md
firmware/application/: CMakeLists.txt
firmware/application/inc/: app_config.h
firmware/application/linker/: stm32_app.ld
firmware/application/src/: main.c
firmware/bootloader/: CMakeLists.txt
firmware/bootloader/inc/: boot_manager.h  boot_state.h  bootloader.h
firmware/bootloader/linker/: stm32_bootloader.ld
firmware/bootloader/src/: boot_manager.c  main.c
firmware/common/: CMakeLists.txt
firmware/common/inc/: boot_confirm.h  common_defs.h  crc32.h  flash_if.h  image_metadata.h
firmware/common/src/: boot_confirm.c  common_utils.c  crc32.c  flash_if.c  image_metadata.c
firmware/platform/: CMakeLists.txt
firmware/platform/stm32/: platform_init.c
host-tools/ota-cli/: CMakeLists.txt
host-tools/ota-cli/inc/: ota_package.h  ota_transport.h
host-tools/ota-cli/src/: main.c  ota_package.c  ota_transport.c
scripts/: flash.sh
